# Rinerf3

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-rinerf3.podspec  run.sh  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifestDeprecated.xml
android/src/main/java/com/rinerf3/: Rinerf3Module.java  Rinerf3Package.java
cpp/: react-native-rinerf3.cpp  react-native-rinerf3.h
example/: app.json  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/rinerf3example/: ReactNativeFlipper.java
example/android/app/src/main/java/com/rinerf3example/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/rinerf3example/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/Rinerf3Example/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/Rinerf3Example.xcodeproj/: project.pbxproj
example/ios/Rinerf3Example.xcodeproj/xcshareddata/xcschemes/: Rinerf3Example.xcscheme
example/ios/Rinerf3ExampleTests/: Rinerf3ExampleTests.m
example/src/: App.tsx
ios/: Rinerf3.h  Rinerf3.mm
ios/Rinerf3.xcodeproj/: project.pbxproj
src/: Interface.ts  IperfConfiguration.ts  IperfError.ts  IperfIntervalResult.ts  IperfNotificationName.ts  IperfStreamIntervalResult.ts  IperfThroughput.ts  NativeMethods.ts  NativeModules.ts  enums.ts  index.tsx
